[gd_scene load_steps=6 format=3 uid="uid://cex4idm5n1ab5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_13if0"]
[ext_resource type="Texture2D" uid="uid://hqyydema5gaf" path="res://assets/ui/star.png" id="1_ipxyc"]
[ext_resource type="Texture2D" uid="uid://1yusn654vkb1" path="res://assets/ui/open.png" id="2_m0vru"]
[ext_resource type="Texture2D" uid="uid://d34s2obu3nfp3" path="res://assets/ui/save.png" id="3_r2dbh"]
[ext_resource type="PackedScene" uid="uid://cuntk4a4wou5j" path="res://scenes/na_workspace.tscn" id="8_tl6xe"]

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_13if0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Application" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 2
item_0/text = "About"
item_0/id = 0
item_1/text = "Close"
item_1/id = 1

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar"]
size = Vector2i(172, 197)
item_count = 4
item_0/text = "New Project"
item_0/icon = ExtResource("1_ipxyc")
item_0/id = 3
item_1/text = "Open"
item_1/icon = ExtResource("2_m0vru")
item_1/id = 0
item_2/text = "Save"
item_2/icon = ExtResource("3_r2dbh")
item_2/id = 1
item_3/text = "Save As..."
item_3/id = 2

[node name="NAWorkspace" parent="VBoxContainer" instance=ExtResource("8_tl6xe")]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(1000, 600)
access = 2
filters = PackedStringArray("*.cv")

[node name="OpenDialog" type="FileDialog" parent="."]
initial_position = 1
title = "Open a File"
size = Vector2i(1000, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.cv")

[connection signal="id_pressed" from="VBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
